# ros2-moveit-6dof-arm

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
scripts/: docker_build.sh  docker_shell.sh
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/config/: my_robot_controllers.yaml
src/my_robot_bringup/launch/: bringup.launch.py
src/my_robot_bringup/my_robot_bringup/: planning_example.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: view_robot.launch.py
src/my_robot_description/urdf/: my_robot.ros2_control.xacro  my_robot.urdf.xacro
src/my_robot_moveit_config/: CMakeLists.txt  package.xml
src/my_robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/my_robot_moveit_config/launch/: moveit.launch.py
src/my_robot_moveit_config/rviz/: moveit.rviz
src/my_robot_moveit_config/srdf/: my_robot.srdf.xacro
